--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<a href="http://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="0.jpeg"></a>
+<a href="http://www.youtube.com/watch?v=dQw4w9WgXcQ#t=01m25s"><img src="0.jpeg"></a>
 
 </body>
 </html>
